WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89330
Fix syntax of FileReader::readAsDataURL result
https://bugs.webkit.org/show_bug.cgi?id=89330
Summary
Fix syntax of FileReader::readAsDataURL result
Taiju Tsuiki
Reported
2012-06-17 23:45:30 PDT
According to RFC2397, syntax of Data URL is like that:
> dataurl := "data:" [ mediatype ] [ ";base64" ] "," data
http://tools.ietf.org/html/rfc2397
That is, ";" before "base64" is required. However, current implementation of readAsDataURL returns Data URL without ";", when media type is not specified.
Attachments
Patch
(6.58 KB, patch)
2012-06-17 23:57 PDT
,
Taiju Tsuiki
no flags
Details
Formatted Diff
Diff
Patch
(6.70 KB, patch)
2012-06-18 00:12 PDT
,
Taiju Tsuiki
no flags
Details
Formatted Diff
Diff
Patch
(7.25 KB, patch)
2012-06-18 02:36 PDT
,
Taiju Tsuiki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Taiju Tsuiki
Comment 1
2012-06-17 23:57:59 PDT
Created
attachment 148062
[details]
Patch
Taiju Tsuiki
Comment 2
2012-06-18 00:10:00 PDT
Comment on
attachment 148062
[details]
Patch Needs some more rebaseline
Taiju Tsuiki
Comment 3
2012-06-18 00:12:40 PDT
Created
attachment 148067
[details]
Patch
Kinuko Yasuda
Comment 4
2012-06-18 02:00:00 PDT
Comment on
attachment 148067
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148067&action=review
The change looks good to me.
> Source/WebCore/ChangeLog:7 > +
Nit: can you add when it gets broken? (e.g. "when media type is not specified") Please list affected tests as well (Test: ....).
Taiju Tsuiki
Comment 5
2012-06-18 02:36:06 PDT
Created
attachment 148075
[details]
Patch
Taiju Tsuiki
Comment 6
2012-06-18 02:39:40 PDT
Comment on
attachment 148067
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148067&action=review
>> Source/WebCore/ChangeLog:7 >> + > > Nit: can you add when it gets broken? (e.g. "when media type is not specified") > > Please list affected tests as well (Test: ....).
Done
Kent Tamura
Comment 7
2012-06-18 02:45:53 PDT
Comment on
attachment 148075
[details]
Patch Looks ok.
WebKit Review Bot
Comment 8
2012-06-18 03:30:58 PDT
Comment on
attachment 148075
[details]
Patch Clearing flags on attachment: 148075 Committed
r120583
: <
http://trac.webkit.org/changeset/120583
>
WebKit Review Bot
Comment 9
2012-06-18 03:31:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug