Fix syntax of FileReader::readAsDataURL result https://bugs.webkit.org/show_bug.cgi?id=89330

When readAsDataURL generates data URL without media type, it used to omit semicolon before
"base64" keyword.  But this semicolor is required in this case, according to RFC2397.

Patch by Taiju Tsuiki <tzik@chromium.org> on 2012-06-18
Reviewed by Kent Tamura.

Source/WebCore:

Test: fast/files/read-blob-async.html
      fast/files/workers/worker-read-blob-async.html:
      fast/files/workers/worker-read-blob-sync.html:

* fileapi/FileReaderLoader.cpp:
(WebCore::FileReaderLoader::convertToDataURL):

LayoutTests:

* fast/files/read-blob-async-expected.txt:
* fast/files/workers/worker-read-blob-async-expected.txt:
* fast/files/workers/worker-read-blob-sync-expected.txt:
* platform/chromium/fast/files/read-blob-async-expected.txt:
* platform/chromium/fast/files/workers/worker-read-blob-async-expected.txt:
* platform/chromium/fast/files/workers/worker-read-blob-sync-expected.txt:

Canonical link: https://commits.webkit.org/107195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120583 268f45cc-cd09-0410-ab3c-d52691b4dbfc