Source/WebCore/fileapi/FileReaderLoader.cpp
@@ -298,11 +298,8 @@ void FileReaderLoader::convertToDataURL()
         return;
     }
 
-    if (!m_dataType.isEmpty()) {
-        builder.append(m_dataType);
-        builder.append(";base64,");
-    } else
-        builder.append("base64,");
+    builder.append(m_dataType);
+    builder.append(";base64,");
 
     Vector<char> out;
     base64Encode(static_cast<const char*>(m_rawData->data()), m_bytesLoaded, out);
